objects/Solution_Category__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solution_Name__c</fullName>
        <label>Category Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxonomy_Solution_Category__c</fullName>
        <label>Taxonomy Solution Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxonomy_Solution__c</fullName>
        <label>Taxonomy Solution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Profile_Field_Name__c</fullName>
        <label>Technical Profile Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Solution_Name__c</columns>
        <columns>Technical_Profile_Field_Name__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>